syntax = "proto3";
package protobuf.protos;

option java_outer_classname = "PrivateMessageProto";
option optimize_for = LITE_RUNTIME; //SPEED;

//客户端发送单聊消息
message UpStreamMessageProto {
  repeated string toUId = 2; //消息目标的userid
  string className = 3; //内容对象类型名称
  string content = 4; //内容
  uint32 sendtiime = 5; //发送时间
}

//消息类型
enum MsgType {
  PERSON = 0; //消息类型：单人会话
  PERSONS = 1; //多人会话
  GROUP = 2; //群消息
}

//服务端发送消息
message DownStreamMessageProto {
  string fromUserId = 1; // 发送方uid
  MsgType type = 2; //消息类型
  string groupId = 3; //如果是群消息那么指定群groupId
  string classname = 4; //内容对象类型名称
  bytes content = 5; //内容
  int64 sendtime = 6; //消息时间
  string msgId = 7; //消息唯一标示
}


